# saga-pattern-example

./: README.md
saga-marketing/: main.py  notification_service.py  post_service.py  pyproject.toml  saga_orchestrator.py  website_service.py
saga-marketing/schemas/: schemas.py
