[tool.poetry]
name = "saga-marketing"
version = "0.1.0"
description = ""
authors = ["jrdalarmi <jeferson.dalarmi@shipay.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
